--- a/_sass/_basscss.scss
+++ b/_sass/_basscss.scss
@@ -23,3 +23,5 @@
 @import 'basscss/utility-headings';
 @import 'basscss/utility-typography';
 @import 'basscss/utility-white-space';
+
+@import 'basscss/grid';
