--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -1,10 +1,9 @@
 <div class="py2 post-footer">
-  <img src="/images/me.jpeg" alt="John Otander" class="avatar" />
+  <img src="https://pbs.twimg.com/profile_images/648997126660313088/xAxVP4Hw_400x400.jpg" alt="Neil Loknath" class="avatar" />
   <p>
-    Pixyll is an open-source Jekyll theme that's built by <a href="http://johnotander.com">John Otander</a>.
-    When he's not writing code and building things, he likes to ski. A. Lot.
+    A blog by <a href="https://www.nloko.ca/">Neil Loknath</a>.
   </p>
   <p>
-    Follow him on <a href="https://twitter.com/4lpine">Twitter</a>.
+    Follow him on <a href="https://twitter.com/nloko">Twitter</a>.
   </p>
 </div>
