--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="center">
   <div class="measure">
     <small>
-      Made with &hearts; by <a href="https://nloko.ca/">Neil Loknath</a> (<a href="https://twitter.com/nloko">@nloko</a>).<br>
+      Made with &hearts; by <a href="http://www.nloko.ca/">Neil Loknath</a> (<a href="https://twitter.com/nloko">@nloko</a>).<br>
     </small>
   </div>
 </footer>
